--- a/css/_discover.scss
+++ b/css/_discover.scss
@@ -5,6 +5,36 @@
     max-width: 1300px;
     margin: auto;
     overflow: hidden;
+    @media screen and (max-width: 1200px) {
+        max-width: 1100px;
+    }
+    @media screen and (max-width: 1010px) {
+        padding: 50px 100px 100px 100px;
+    }
+    @media screen and (max-width: 1000px) {
+        max-width: 900px;
+    }
+    @media screen and (max-width: 950px) {
+        max-width: 850px;
+    }
+    @media screen and (max-width: 900px) {
+        max-width: 800px;
+    }
+    @media screen and (max-width: 850px) {
+        max-width: 750px;
+    }
+    @media screen and (max-width: 800px) {
+        max-width: 700px;
+    }
+    @media screen and (max-width: 750px) {
+        max-width: 650px;
+    }
+    @media screen and (max-width: 700px) {
+        max-width: 450px;
+    }
+    @media screen and (max-width: 500px) {
+        max-width: 450px;
+    }
 
     .discover__container {
         display: flex;
@@ -14,9 +44,23 @@
         position: relative;
         width: 90%;
         margin: auto;
+        @media screen and (max-width: 1010px) {
+            flex-direction: column;
+        }
 
         .discover__text {
             width: 40%;
+            @media screen and (max-width: 1010px) {
+                width: 100%;
+                margin-bottom: 5%;
+            }
+            @media screen and (max-width: 950px) {
+                width: 140%;
+            }
+            @media screen and (max-width: 700px) {
+                width: 190%;
+            }
+
             .discover__title {
                 font-family: "CompassDisplay-Regular";
                 font-style: italic;
@@ -64,6 +108,9 @@
         .discover__wrapper {
             display: flex;
             width: 50%;
+            @media screen and (max-width: 1200px) {
+                max-width: 1170px;
+            }
             /* overflow: hidden; */
 
             .discover__cardImg {
@@ -86,6 +133,27 @@
                         align-items: center;
                         justify-content: center;
                         cursor: pointer;
+                        @media screen and (max-width: 500px) {
+                            width: 281px;
+                        }
+                        @media screen and (max-width: 480px) {
+                            width: 260px;
+                        }
+                        @media screen and (max-width: 430px) {
+                            width: 250px;
+                        }
+                        @media screen and (max-width: 420px) {
+                            width: 235px;
+                        }
+                        @media screen and (max-width: 400px) {
+                            width: 215px;
+                        }
+                        @media screen and (max-width: 370px) {
+                            width: 215px;
+                        }
+                        @media screen and (max-width: 340px) {
+                            width: 175px;
+                        }
                     }
                     
                     .discover__descriptionImg {
@@ -100,6 +168,18 @@
                         transform: translateY(30px);
                         opacity: 0;
                         visibility: hidden;
+                        @media screen and (max-width: 701px) {
+                            width: 80%;
+                        }
+                        @media screen and (max-width: 501px) {
+                            width: 100%;
+                        }
+                        @media screen and (max-width: 415px) {
+                            font-size: 80%;
+                        }
+                        @media screen and (max-width: 341px) {
+                            font-size: 50%;
+                        }
                     }
                     &:hover {
                         .discover__descriptionImg {
@@ -138,6 +218,64 @@
             z-index: 10;
             bottom: 40px;
             left: 375px;
+            @media screen and (max-width: 1290px) {
+                bottom: 35px;
+                left: 358px;
+            }
+            @media screen and (max-width: 1200px) {
+                bottom: 33px;
+                left: 305px;
+            }
+            @media screen and (max-width: 1085px) {
+                left: 299px;
+            }
+            @media screen and (max-width: 1070px) {
+                left: 295px;
+            }
+            @media screen and (max-width: 1045px) {
+                left: 285px;
+            }
+            @media screen and (max-width: 1045px) {
+                left: 278px;
+            }
+            @media screen and (max-width: 1010px) {
+                bottom: 35px;
+                left: 127px;
+            }
+            @media screen and (max-width: 1000px) {
+                left: 102px;
+            }
+            @media screen and (max-width: 950px) {
+                left: 91px;
+            }
+            @media screen and (max-width: 900px) {
+                left: 80px;
+            }
+            @media screen and (max-width: 850px) {
+                left: 68px;
+            }
+            @media screen and (max-width: 800px) {
+                left: 57px;
+            }
+            @media screen and (max-width: 700px) {
+                left: 0px;
+            }
+            @media screen and (max-width: 500px) {
+                left: 0px;
+            }
+            @media screen and (max-width: 410px) {
+                left: -8px;
+            }
+            @media screen and (max-width: 370px) {
+                left: -18px;
+            }
+            @media screen and (max-width: 340px) {
+                left: -24px;
+            }
+            /* @media screen and (max-width: 976px) {
+                bottom: 30px;
+                left: 295px;
+            } */
 
             .discover__left {
                 padding: 20px;
